fix about cards visibility

--- a/style.css
+++ b/style.css
@@ -170,3 +170,10 @@ p {
   opacity: 1;
   visibility: visible;
 }
+
+.card,
+.card h3,
+.card p {
+  opacity: 1;
+  visibility: visible;
+}
